# ZyboGPT

./: .gitignore  Makefile  README.md
docs/: architecture.md
hw/: README.md  build.sbt
hw/constraints/: zybo_z7_10.xdc
hw/src/main/scala/zybogpt/: Attention.scala  AxiLiteSlave.scala  Config.scala  Embedding.scala  FeedForward.scala  Int8MacArray.scala  Int8MacUnit.scala  KvCache.scala  LUT_ANALYSIS.md  RMSNorm.scala  SamplingUnit.scala  Sequencer.scala  Softmax.scala  TDotUnit.scala  TransformerLayer.scala  WeightBram.scala  WeightDecoder.scala  WeightInit.scala  ZyboGPT.scala
hw/src/test/scala/zybogpt/: AxiLiteSim.scala  Int8MacSim.scala  KvCacheSim.scala  RMSNormSim.scala  SamplingSim.scala  SoftmaxSim.scala  TDotUnitSim.scala  WeightDecoderSim.scala  ZyboGPTPipelineDebugSim.scala  ZyboGPTRomeoSim.scala  ZyboGPTSim.scala
python/train/: README.md  benchmark.py  bitlinear.py  config.py  dataset.py  export.py  model.py  reference_inference.py  requirements.txt  tokenizer.py  train.py
rust/: Cargo.toml  README.md  linker.x  memory.x
rust/.cargo/: config.toml
rust/src/: accelerator.rs  main.rs  protocol.rs  tokenizer.rs  uart.rs
scripts/: README.md  benchmark.py  board.py  cmd.py  diagnose_quantization.py  flash.tcl  generate.py  generate_weights.py  uart_diag.py  update_test_refs.py  validate_model.py
vivado/: block_design.tcl  create_project.tcl  report_hierarchy.tcl  run_bitstream.tcl  run_impl.tcl  run_synth.tcl
